add block and unblock User API
