# swagger-output.json
@@ -393,6 +393,103 @@
         }
       }
     },
+    "/api/blocks/": {
+      "post": {
+        "tags": [
+          "Block"
+        ],
+        "summary": "Block a user",
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "409": {
+            "description": "Conflict"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "description": "User ID to block",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "blockedId": {
+                    "type": "string",
+                    "example": "699da39ee5596118b557aad2"
+                  }
+                },
+                "required": [
+                  "blockedId"
+                ]
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Block"
+        ],
+        "summary": "Unblock a user",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "description": "User ID to unblock",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "blockedId": {
+                    "type": "string",
+                    "example": "699da39ee5596118b557aad2"
+                  }
+                },
+                "required": [
+                  "blockedId"
+                ]
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/suggest-friends/": {
       "post": {
         "tags": [
